# nn_part

./: Android.mk  CMakeLists.txt  README.md
host/: Makefile  data.c  main.c
host/include/: activations.h  data.h  loss.h  math_TA.h  matrix.h  network.h  optimizer.h
host/src/: activations.c  data.c  loss.c  math_TA.c  matrix.c  network.c
ta/: Android.mk  Makefile  activations.c  data.c  loss.c  math_TA.c  matrix.c  network.c  nn_part_ta.c  optimizer.c  storage.c  sub.mk  user_ta_header_defines.h
ta/include/: activations.h  data.h  loss.h  math_TA.h  matrix.h  network.h  nn_part_ta.h  storage.h  utils.h
